module(name = "tensorrt_yolo")

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_cuda", version = "0.2.1")

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "",
)
use_repo(cuda, "local_cuda")

non_module_deps = use_extension("@tensorrt_yolo//:extensions.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "cvcuda",
    "opencv",
    "tensorrt",
)
